# pytesseract_wrapper

./: Dockerfile  ReadMe.md  docker-compose.yaml  pyproject.toml  scan.py
